Model generation works now